# swecc-email-scraper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mailbox.mbox  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  test-lint-format.yml
email_scraper/: __init__.py  cli.py
email_scraper/analyzers/: __init__.py
email_scraper/formatters/: __init__.py  csv.py  json.py  yaml.py
email_scraper/processors/: __init__.py  classifier.py  emailClassifier.py  example.py
tests/: test_formatters.py  test_processors.py
